<resources>
    <string name="app_name">My Margdarshaka</string>
    <string name="student_login_text">I am a student</string>
    <string name="mentor_login_text">I am a mentor</string>
    <string name="hindi_chip">हिंदी</string>
    <string name="english_chip">English</string>
    <string name="welcome_string">WELCOME\nTO\nSCHOOLR</string>
    <string name="login_text">To get started,\nenter your \nphone number</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="get_otp_button_text">GET OTP</string>
    <string name="verify">verify</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="otp">OTP</string>
    <string name="question_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </string>
    <string name="question">Question</string>
    <string name="option">OPTION</string>
    <string name="option_1">OPTION 1</string>
    <string name="option_2">OPTION 2</string>
    <string name="option_3">OPTION 3</string>
    <string name="option_4">OPTION 4</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="guidelines_for_students">GUIDELINES FOR STUDENTS</string>
    <string name="guidelines_for_mentors">GUIDELINES FOR MENTORS</string>

    <!--Sign Up UI Strings-->
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="class_label">Class</string>
    <string name="language_label">Preferred Language of Instruction</string>
    <string name="time_label">Preferred Time Slot</string>
    <string name="student_subjects">Which subjects do you want to learn?</string>
    <string name="mentor_subjects">What do you want to teach?</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="math">Math</string>
    <string name="telugu">Telugu</string>
    <string name="science">Science</string>
    <string name="social">Social Science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="history">History and Civics</string>
    <string name="geography">Geography</string>

    <string name="class6">Class 6</string>
    <string name="class7">Class 7</string>
    <string name="class8">Class 8</string>
    <string name="class9">Class 9</string>
    <string name="class10">Class 10</string>
    <string name="class11">Class 11</string>
    <string name="class12">Class 12</string>

    <!--Homepage UI Strings-->
    <string name="guidelines_label">Guidelines</string>
    <string name="my_mentors_label">My Mentors</string>
    <string name="my_students_label">My Students</string>
    <string name="feedback_label">Feedback</string>
    <string name="logout_label">Logout</string>

    <string name="feedback_message">Please enter your feedback. </string>
    <!--    <string name="txtCredits">www.google.com</string>-->

    <!--    Guidelines for Students Page-->
    <string name="s_guideline1">"Education can change your life! You have taken the first step already by registering on the MyMargdarshaka App. "</string>
    <string name="s_guideline2">You will find your assigned mentors along with their contact details, in the ‘My Mentors’ page, accessible from the side menu. </string>
    <string name="s_guideline3">Your mentors have been assigned according to your class, which subjects you want to learn, your ‘Preferred Language of Instruction’ and your ‘Preferred Time Slot’. </string>
    <string name="s_guideline4">Please contact your mentors as soon as you get their contact information and enquire how to coordinate with them about classes, assignments and exams.</string>
    <string name="s_guideline5">Although there is no compulsion to take exams by being registered on the platform, it is strictly recommended that you register for, prepare well and take the Secondary (10th standard) and Senior Secondary (12th standard) certification from the National Institute of Open Schooling (NIOS), which is the Government of India’s official examination and certification portal for non-traditional schooling.
</string>
    <string name="s_guideline6"><a href="https://sdmis.nios.ac.in/">Please refer to the syllabus and procedure for taking the examinations given in the NIOS website.</a>
</string>
    <string name="s_guideline7">Having these certifications will help you in many ways in the future.
</string>
    <string name="s_guideline8">"<a href="https://docs.google.com/document/d/1WGHR1hr-8y5eQNR-HD-ljx77Q19XBmAYIzN1BS0jcwo/edit">Online education can be challenging so try to make the best of it by referring to these resources.</a> "</string>
    <string name="s_guideline9">Please use the Feedback option to report any undesirable activity and our moderators will look into it.
</string>
    <string name="s_guideline10">Please try to make the best of the platform and the guidance given to you by your mentor. Good luck to you as you pursue your education sincerely!
</string>


    <!--    Guidelines for Mentors Page-->
    <string name="m_guideline1">You are your students’ mentor or ‘Margdarshak’ which means you have the noble responsibility of showing them their way through education!
</string>
    <string name="m_guideline2">You can find the list of your assigned students, along with their details, on the ‘My Students’ page, accessible from the side menu.
</string>
    <string name="m_guideline3">Your students have been assigned to you keeping in mind the class and subjects that you have volunteered to teach. They also have the same ‘Preferred Language of Instruction’ and ‘Preferred Time Slot’ so that it will be easier for you to reach them.
</string>
    <string name="m_guideline4">Please contact your students as soon as they are assigned to you and coordinate with them about how to go about mentoring them.
</string>
    <string name="m_guideline5">Although you are free to use your creativity and discretion in your mentorship, you are advised to keep some main ideas in mind. Your students should be able to get Secondary (10th standard) and Senior Secondary (12th standard) certification from the National Institute of Open Schooling (NIOS), which is the Government of India’s official examination and certification portal for non-traditional schooling.</string>
    <string name="m_guideline6">"<a href="https://sdmis.nios.ac.in/">Please refer to the syllabus and procedure for taking the examinations given in the NIOS website.</a> "</string>
    <string name="m_guideline7">Please encourage your students to take the certification exams and guide them through the process as much as possible.
</string>
    <string name="m_guideline8">Please try to understand the variable situations that your students might be going through and try to conduct classes and provide assignments in a way that works for them. They may not be very comfortable with technology, so please take the time to get them onboard. Try to conduct regular classes, give assignments and make the best use of available resources.
</string>
    <string name="m_guideline9">"<a href="https://docs.google.com/document/d/1pQRzDyfAsI3TXRGUAC0ojEdwGay095gFAEnRxXIebTY/edit">Here are some resources to guide you.</a> "</string>
    <string name="m_guideline10">Please use the Feedback option to report any undesirable activity and our moderators will look into it.
</string>
    <string name="m_guideline11">Remember that education is a human right with immense power to transform! More power to you for doing your part!</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PHONE">PHONE</string>
    <string name="my_mentors_message">Below you\'ll find the mentors assigned to you! Talk to them and get started with your learning!</string>
    <string name="my_students_message">Below you\'ll find the students assigned to you! Talk to them and get started with your teaching!</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="please_describe_your_problem">Please describe your problem</string>
</resources>
